# ams

./: .dockerignore  .gitattributes  Dockerfile  Dockerfile.gpu  MANIFEST.in  README.md  setup.cfg
ams/: _version.py  cli.py  meningioma_T1wc_128iso_v1.h5
scripts/: convert_to_tflite.py
