[metadata]
name = ams
url = https://github.com/neuronets/ams
author = AMS Developers
author_email = jakub.kaczmarzyk@gmail.com
description = Automated Meningioma Segmentation
license = Apache License, 2.0
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
install_requires =
    click >= 7.0
    nobrainer @ git+https://github.com/neuronets/nobrainer@8b14cd7ade86429726f5d939aa5928610ee0e0d5
    etelemetry
python_requires = >=3.5

[options.entry_points]
console_scripts =
    ams = ams.cli:predict

[options.extras_require]
cpu = tensorflow >= 1.14
gpu = tensorflow-gpu >= 1.14

[versioneer]
VCS = git
style = pep440
versionfile_source = ams/_version.py
versionfile_build = ams/_version.py
tag_prefix =
parentdir_prefix =
